--- a/index.css
+++ b/index.css
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
+
 body {
-color: white;
-background-color: black;
-font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(0, 0, 0);
+    margin: 0%;
+    padding: 0%;
+    font-family: 'Bruno Ace SC' , sans-serif;
+    color: rgb(255, 252, 252);
+
 }
 ul {
     display: flex;
@@ -18,13 +23,13 @@ header img {
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    border: 5px solid green;
+    border: 5px solid black;
 }
 .center {
 text-align: center;
 }
 h1 {
-    color: rgb(10, 248, 10);
+    color: rgb(0, 211, 0);
 }
 footer {
 display: flex;
@@ -32,6 +37,9 @@ justify-content: center;
 }
 footer a {
 text-align: center;
+}
+footer a {
+    margin: 20px;
 }
     
 
@@ -42,5 +50,7 @@ footer p {
     padding: 0px 50px;
 }
 nav a:hover {
-    color: rgb(13, 221, 13);
+    color: rgb(0, 0, 0);
+    background-color: white;
 }
+
